--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
 		<spring.core.version>3.1.0.RELEASE</spring.core.version>
 		<spring.data.jpa.version>1.1.0.RC1</spring.data.jpa.version>
 
+		<spring.security.core.version>3.1.0.RELEASE</spring.security.core.version>
+		
 		<cglib.version>2.2</cglib.version>
 		<aspectj.version>1.6.10</aspectj.version>
 
@@ -84,6 +86,37 @@
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
+		
+		<!-- Spring Security -->
+	    <dependency>
+	    	<groupId>org.springframework.security</groupId>
+	    	<artifactId>spring-security-core</artifactId>
+	    	<version>${spring.security.core.version}</version>
+	    	<type>jar</type>
+	    	<scope>compile</scope>
+	    </dependency>
+	    <dependency>
+	    	<groupId>org.springframework.security</groupId>
+	    	<artifactId>spring-security-web</artifactId>
+	    	<version>${spring.security.core.version}</version>
+	    	<type>jar</type>
+	    	<scope>compile</scope>
+	    </dependency>
+	    <dependency>
+	    	<groupId>org.springframework.security</groupId>
+	    	<artifactId>spring-security-config</artifactId>
+	    	<version>${spring.security.core.version}</version>
+	    	<type>jar</type>
+	    	<scope>compile</scope>
+	    </dependency>
+	    <dependency>
+	    	<groupId>org.springframework.security</groupId>
+	    	<artifactId>spring-security-taglibs</artifactId>
+	    	<version>${spring.security.core.version}</version>
+	    	<type>jar</type>
+	    	<scope>compile</scope>
+	    </dependency>
+	    
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-aspects</artifactId>
