--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -41,4 +41,7 @@
 		<filter-name>springSecurityFilterChain</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
+<!-- 	<welcome-file-list> -->
+<!-- 		<welcome-file>/WEB-INF/view/inicio/index.jsp</welcome-file> -->
+<!-- 	</welcome-file-list> -->
 </web-app>
