--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 		<hibernate.entitymanager.version>3.6.3.Final</hibernate.entitymanager.version>
 		<hibernate.jpa-api.version>2.0-cr-1</hibernate.jpa-api.version>
 		<c3p0.version>0.9.1.2</c3p0.version>
-
+		<apache.tiles.version>2.2.1</apache.tiles.version>
 		<querydsl.version>2.2.5</querydsl.version>
 		<slf4j.version>1.6.1</slf4j.version>
 		<log4j.version>1.2.14</log4j.version>
@@ -72,6 +72,36 @@
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
+		
+		<dependency>
+			  <groupId>org.apache.tiles</groupId> 
+			  <artifactId>tiles-core</artifactId> 
+			  <version>${apache.tiles.version}</version> 
+			  <type>jar</type> 
+			  <scope>compile</scope> 
+		</dependency>
+		<dependency>
+			  <groupId>org.apache.tiles</groupId> 
+			  <artifactId>tiles-template</artifactId> 
+			  <version>${apache.tiles.version}</version> 
+			  <type>jar</type> 
+			  <scope>compile</scope> 
+		</dependency>
+		<dependency>
+			  <groupId>org.apache.tiles</groupId> 
+			  <artifactId>tiles-jsp</artifactId> 
+			  <version>${apache.tiles.version}</version> 
+			  <type>jar</type> 
+			  <scope>compile</scope> 
+			  </dependency>
+		<dependency>
+			  <groupId>org.apache.tiles</groupId> 
+			  <artifactId>tiles-servlet</artifactId> 
+			  <version>${apache.tiles.version}</version> 
+			  <type>jar</type> 
+			  <scope>compile</scope> 
+		</dependency>
+					
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-jdbc</artifactId>
