--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
 		<spring.core.version>3.1.0.RELEASE</spring.core.version>
-		<spring.data.jpa.version>1.1.0.RC1</spring.data.jpa.version>
+		<spring.data.jpa.version>1.0.0.RELEASE</spring.data.jpa.version>
 
 		<spring.security.core.version>3.1.1.RELEASE</spring.security.core.version>
 		
@@ -256,7 +256,7 @@
 		<dependency>
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-jpa</artifactId>
-			<version>1.1.0.BUILD-SNAPSHOT</version>
+			<version>1.0.0.RELEASE</version>
 		</dependency>
 
 		<!-- Database pooling -->
